--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,32 @@
 name: Your New Jekyll Site
 markdown: redcarpet
 pygments: true
+url: http://megakemp.com
+
+theme:
+  # Color for top bar, links, etc
+  highlight_color: '#3498db'
+
+  # Profile links on the left sidebar, leave blank to ignore
+  social:
+    github: ecampidoglio
+    stackoverflow: 26396
+    twitter: ecampidoglio
+    #bitbucket:
+    #hacker_news:
+    #stackexchange:
+    #facebook:
+    #tumblr:
+    #linkedin:
+    #gplus:
+
+  # "Hi, I'm _______"
+  name: Enrico Campidoglio
+  email: enrico@tretton37.com
+  tagline: ""
+
+  # Google Analytics key, leave blank to ignore
+  google_analytics_key:
+
+  # Toggle "Postings are my own" disclaimer in footer
+  show_disclaimer: true
