Moves the RSS feed URL to the configuration file.

--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ theme:
     github: ecampidoglio
     stackoverflow: 26396
     twitter: ecampidoglio
+    rss: http://feeds.feedburner.com/thoughtology
     #bitbucket:
     #hacker_news:
     #stackexchange:
