Removes build warnings from Jekyll 2.4.0.

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name: Enrico Campidoglio
 description: The blog of Enrico Campidoglio
 markdown: redcarpet
-pygments: true
+highlighter: pygments
 url: http://megakemp.com
 permalink: /:year/:month/:day/:title/
 paginate: 5
