--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ paginate: 5
 paginate_path: blog/page:num
 
 redcarpet:
-  extensions: ["tables", "autolink", "strikethrough"]
+  extensions: ["tables", "autolink", "strikethrough", "footnotes"]
 
 gems:
   - jekyll-redirect-from
