--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 name: Enrico Campidoglio
 description: The blog of Enrico Campidoglio
 markdown: redcarpet
-highlighter: pygments
+highlighter: rouge
 url: http://megakemp.com
 permalink: /:year/:month/:day/:title/
 paginate: 5
