--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,11 @@
 name: Enrico Campidoglio
 description: The blog of Enrico Campidoglio
-markdown: redcarpet
+markdown: kramdown
 highlighter: rouge
 url: http://megakemp.com
 permalink: /:year/:month/:day/:title/
 paginate: 5
 paginate_path: blog/page:num
-
-redcarpet:
-  extensions: ["tables", "autolink", "strikethrough", "footnotes"]
 
 gems:
   - jekyll-redirect-from
