Renames the 'theme' config option to 'style'.
As of Jekyll 3.2.1 'theme' is a reserved keyword,
so it can no longer be used as a configuration option.

https://github.com/jekyll/jekyll/issues/5163#issuecomment-236320771

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ gems:
   - jekyll-redirect-from
   - jekyll-paginate
 
-theme:
+style:
   # Base color for background elements such as the top bar
   base_color: '#444'
   # Accent color for links, etc
