Adds LinkedIn to the list of social profiles

--- a/_config.yml
+++ b/_config.yml
@@ -22,13 +22,13 @@ style:
     github: ecampidoglio
     stackoverflow: 26396
     twitter: ecampidoglio
+    linkedin: ecampidoglio
     rss: http://feeds.feedburner.com/thoughtology
     #bitbucket:
     #hacker_news:
     #stackexchange:
     #facebook:
     #tumblr:
-    #linkedin:
     #gplus:
 
   # "Hi, I'm _______"
