Updates the email address in the configuration file

--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ style:
 
   # "Hi, I'm _______"
   name: Enrico Campidoglio
-  email: enrico@tretton37.com
+  email: enrico@megakemp.com
   tagline: ""
 
   # Google Analytics Tracking ID, leave blank to ignore
