Links to the new RSS feed

--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ style:
     stackoverflow: 26396
     twitter: ecampidoglio
     linkedin: ecampidoglio
-    rss: http://feeds.feedburner.com/thoughtology
+    rss: http://feeds.feedburner.com/megakemp
     #bitbucket:
     #hacker_news:
     #stackexchange:
