Puts the Enrico Campidoglio AB as the copyright holder

--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ style:
     #gplus:
 
   # "Hi, I'm _______"
-  name: Enrico Campidoglio
+  name: Enrico Campidoglio AB
   email: enrico@megakemp.com
   tagline: ""
 
