--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ permalink: /:year/:month/:day/:title/
 paginate: 3
 paginate_path: blog/page:num
 
-gems:
+plugins:
   - jekyll-redirect-from
   - jekyll-paginate
 
