Adds Keybase to the social media links

--- a/_config.yml
+++ b/_config.yml
@@ -38,6 +38,7 @@ style:
     stackoverflow: 26396
     twitter: ecampidoglio
     linkedin: ecampidoglio
+    keybase: ecampidoglio
     rss: http://feeds.feedburner.com/megakemp
     #bitbucket:
     #hacker_news:
